# wasm-game-of-life

./: .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  codecov.yml  index.html
.cargo/: config.toml
.github/workflows/: gh-pages.yml  test.yml
src/: lib.rs  renderer.rs  universe.rs
src/tests/: wasm.rs
tools/cargo-bin/: Cargo.toml  README.md
tools/cargo-bin/.github/workflows/: rust.yaml
tools/cargo-bin/src/: main.rs
